--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   iframe.style.width = '100%';
   iframe.style.height = '100%';
   iframe.style.margin = '0';
-  iframe.src = 'INSERT URL HERE';
+  iframe.src = 'https;//youtube.com';
   win.document.body.appendChild(iframe);
   window.close();
 </script>
